# src

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: atualizar.yml  ci.yml  pages-astro.yml  pages.yml  publish.yml
data_backup_20260718_092219/participacoes/: participacoes_23150.000715-2016-11.json  participacoes_23156.000102-2019-55.json  participacoes_23158.000096-2019-36.json  participacoes_23158.000097-2017-19.json  participacoes_23158.000104-2019-44.json  participacoes_23158.000107-2018-05.json  participacoes_23158.000122-2018-45.json  participacoes_23158.000142-2019-05.json  participacoes_23158.000145-2019-31.json  participacoes_23158.000147-2018-49.json  participacoes_23158.000151-2017-26.json  participacoes_23158.000154-2018-41.json  participacoes_23158.000163-2017-51.json  participacoes_23158.000173-2018-77.json  participacoes_23158.000181-2018-13.json  participacoes_23158.000186-2018-46.json  participacoes_23158.000199-2018-15.json  participacoes_23158.000208-2017-97.json  participacoes_23158.000213-2025-18.json  participacoes_23158.000217-2018-69.json  participacoes_23158.000218-2018-11.json  participacoes_23158.000225-2018-13.json  participacoes_23158.000236-2025-14.json  participacoes_23158.000258-2018-55.json  participacoes_23158.000280-2016-33.json  participacoes_23158.000306-2016-43.json  participacoes_23158.000310-2024-11.json  participacoes_23158.000316-2018-41.json  participacoes_23158.000317-2018-95.json  participacoes_23158.000318-2018-30.json  participacoes_23158.000332-2016-71.json  participacoes_23158.000341-2017-43.json  participacoes_23158.000342-2017-98.json  participacoes_23158.000358-2016-11.json  participacoes_23158.000364-2016-77.json  participacoes_23158.000365-2016-11.json  participacoes_23158.000370-2017-13.json  participacoes_23158.000371-2015-98.json  participacoes_23158.000371-2020-15.json  participacoes_23158.000372-2015-32.json  (+149 more)
data_backup_20260718_092219/serra/: _index.json  acao_108.json  acao_109.json  acao_110.json  acao_1106.json  acao_1116.json  acao_1117.json  acao_1157.json  acao_1175.json  acao_1238.json  acao_1261.json  acao_1263.json  acao_1406.json  acao_1426.json  acao_1546.json  acao_1591.json  acao_1592.json  acao_1597.json  acao_1602.json  acao_1604.json  acao_1613.json  acao_1614.json  acao_1633.json  acao_1648.json  acao_1652.json  acao_1702.json  acao_1786.json  acao_1795.json  acao_1816.json  acao_1818.json  acao_1829.json  acao_1831.json  acao_1834.json  acao_1838.json  acao_1847.json  acao_1883.json  acao_190.json  acao_1939.json  acao_1945.json  acao_2021.json  (+151 more)
docs/: busca.html  comunidade.html  dados-abertos.html  index.html  investimento.html  jornada.html  llms.txt  painel.html  pendencias-relatorio.html  sem-participacao.html  temas.html
docs/acoes/: 108.html  109.html  110.html  1106.html  1116.html  1117.html  1157.html  1175.html  1238.html  1261.html  1263.html  1406.html  1426.html  1546.html  1591.html  1592.html  1597.html  1602.html  1604.html  1613.html  1614.html  1633.html  1648.html  1652.html  1702.html  1786.html  1795.html  1816.html  1818.html  1829.html  1831.html  1834.html  1838.html  1847.html  1883.html  190.html  1939.html  1945.html  2021.html  2081.html  (+162 more)
docs/api/: busca.json  index.json  investimento.json  jornada.json  painel.json  pendencias-relatorio.json  sem-participacao.json  temas.json
docs/atividades/: 10014.html  10017.html  10019.html  10020.html  10054.html  10057.html  10221.html  10285.html  10343.html  10559.html  10560.html  10561.html  10562.html  10563.html  10564.html  10565.html  10566.html  10567.html  10568.html  (+506 more)
examples/: exemplo.py  poc_scrape.py  poc_serra.py
scripts/: atualizar.sh  purge-pii-history.sh
site/: astro.config.mjs  package-lock.json  package.json  vitest.config.ts
tests/: test_detail.py  test_export_pii.py
(+2371 files in other folders)
