[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "src-etl"
version = "0.1.0"
description = "ETL das ações públicas do SRC/Ifes (Sistema de Registro e Emissão de Certificados) com Playwright + httpx."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ifesserra-lab" }]
keywords = ["etl", "scraping", "playwright", "ifes", "src"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "playwright>=1.40",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
src-etl = "src_etl.cli:main"

[project.urls]
Homepage = "https://github.com/ifesserra-lab/SRC_ETL"
Repository = "https://github.com/ifesserra-lab/SRC_ETL"

[tool.hatch.build.targets.wheel]
packages = ["src/src_etl"]
