[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "src-etl"
version = "0.14.0"
description = "ETL das ações públicas do SRC/Ifes (Sistema de Registro e Emissão de Certificados) com Playwright + httpx."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ifesserra-lab" }]
keywords = ["etl", "scraping", "playwright", "ifes", "src"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "playwright>=1.40",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
src-etl = "src_etl.cli:main"
src-etl-part = "src_etl.cli_part:main"
src-etl-report = "src_etl.relatorio:_cli"
src-etl-enrich = "src_etl.enriquecer:_cli"
src-etl-consolidate = "src_etl.consolidar:_cli"
src-etl-vinculadas = "src_etl.vinculadas:_cli"
src-etl-indicadores = "src_etl.indicadores:_cli"
src-etl-painel = "src_etl.painel:_cli"
src-etl-site = "src_etl.site:_cli"

[project.urls]
Homepage = "https://github.com/ifesserra-lab/SRC_ETL"
Repository = "https://github.com/ifesserra-lab/SRC_ETL"

[tool.hatch.build.targets.wheel]
packages = ["src/src_etl"]
